--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,1 +1,3 @@
+1.13 【今日阅读】https://news.ycombinator.com/item?id=23375193 1985年的 https://news.ycombinator.com/item?id=10014530 1972年的 https://news.ycombinator.com/item?id=12568863 1967年的，从三个不同的角度来描述 programming 这份工作
+
 1.12 【今日阅读】为什么软件开发很困难，按时间循序 http://jeremymikkola.com/posts/2021_01_01_why_software_development_is_hard.html 2006年的 http://curtclifton.net/papers/MoseleyMarks06a.pdf  1986年的 http://worrydream.com/refs/Brooks-NoSilverBullet.pdf
