--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.16 【今日阅读】https://stackoverflow.blog/2020/12/07/measuring-developer-productivity/ 开发者的效率可以被度量吗?
+
 1.15 【今日阅读】https://www.microsoft.com/en-us/research/publication/hints-for-computer-system-design/ 名言有云“任何计算机科学的问题都可以通过增加一层间接性来解决”，这句话就是本文作者说的
 
 1.14 【今日阅读】https://alisterbscott.com/2015/02/06/intentionally-disposable-software/ Programmers don't delete enough production code. It's because we build software systems that are way too complex, have features that no-one uses and are built to last way too long. 
