--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.18 【今日阅读】https://m.signalvnoise.com/the-majestic-monolith/ Ruby on Rails 的作者 DHH 《The Majestic Monolith》
+
 1.17 【今日阅读】http://ergoso.me/computer/science/github/software/evolutionary/couplings/2014/12/10/evsrc-evolutionary-couplings-reveal-poor-software-design.html Evolutionary couplings between files reveal poor design choices in software architecture
 
 1.16 【今日阅读】https://stackoverflow.blog/2020/12/07/measuring-developer-productivity/ 开发者的效率可以被度量吗?
