--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.19 【今日阅读】https://www.thoughtworks.com/insights/blog/microservices-evolutionary-architecture Because each service is decoupled from all other services (at the structural level), replacing one microservice with another resembles swapping one Lego brick for another.
+
 1.18 【今日阅读】https://m.signalvnoise.com/the-majestic-monolith/ Ruby on Rails 的作者 DHH 《The Majestic Monolith》
 
 1.17 【今日阅读】http://ergoso.me/computer/science/github/software/evolutionary/couplings/2014/12/10/evsrc-evolutionary-couplings-reveal-poor-software-design.html Evolutionary couplings between files reveal poor design choices in software architecture
