--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.22 【今日阅读】https://news.ycombinator.com/item?id=25823907 Are We Really Engineers?
+
 1.21 【今日阅读】https://qntm.org/clean It's probably time to stop recommending Clean Code
 
 1.20 【今日阅读】https://dev.to/bosepchuk/why-i-cant-recommend-clean-architecture-by-robert-c-martin-ofd Clean Architecture failed to meet my expectations on a number of fronts. Despite Mr. Martin's obvious passion for the topic, Clean Architecture is poorly organized, lacks examples, and is silent on working with existing systems. The author missed a major opportunity to teach us when and how to apply these lessons to our own systems. Let me explain.
