--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,10 @@
+1.23 【今日阅读】https://www.hillelwayne.com/post/crossover-project/we-are-not-special/ 
+1. Traditional engineering is best done in a Waterfall style, while software is best done in an Agile one.
+2. Trad engineering is very predictable, while software is very unpredictable.
+3. Engineering is mostly about manufacture, while code is mostly about design, because “the code is the design”.
+4. Trad engineering is much more rigorous than software engineering is.
+5. Software moves much faster than traditional engineering does.
+
 1.22 【今日阅读】https://news.ycombinator.com/item?id=25823907 Are We Really Engineers?
 
 1.21 【今日阅读】https://qntm.org/clean It's probably time to stop recommending Clean Code
