--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.24 【今日阅读】https://www.hillelwayne.com/post/crossover-project/what-we-can-learn/ The most common answers I heard fell into two broad categories: 1) we can prepare more, and 2) we can care more.
+
 1.23 【今日阅读】https://www.hillelwayne.com/post/crossover-project/we-are-not-special/ 
 1. Traditional engineering is best done in a Waterfall style, while software is best done in an Agile one.
 2. Trad engineering is very predictable, while software is very unpredictable.
