--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.25 【今日阅读】https://lobste.rs/s/shgt0b/have_historical_changes_development Have historical changes in development practices / tooling degraded the quality of programmers?
+
 1.24 【今日阅读】https://www.hillelwayne.com/post/crossover-project/what-we-can-learn/ The most common answers I heard fell into two broad categories: 1) we can prepare more, and 2) we can care more.
 
 1.23 【今日阅读】https://www.hillelwayne.com/post/crossover-project/we-are-not-special/ 
