--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.28 【今日阅读】https://blog.bitsrc.io/microfrontends-survey-evaluation-d2af7eade306 How Micro Frontends are being Implemented in 2020: A Survey
+
 1.27 【今日阅读】https://erlang-in-anger.com/ It is first and foremost a collection of tips and tricks to help understand where failures come from, and a dictionary of different code snippets and practices that helped developers debug production systems that were built in Erlang.
 
 1.26 【今日阅读】https://arstechnica.com/science/2020/01/a-deep-dive-into-the-apollo-guidance-computer-and-the-hack-that-saved-apollo-14/ 阿波罗14的热修复故事
