--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+1.29 【今日阅读】https://teamtopologies.com/ 把团队分为 stream-aligned, enabling, complicated subsystem, platform 四种类型，从而给团队之间的协作划分为 X-as-a-Service, Facilitating, Collaboration 三种。如果实际的协作强度超过了预期，说明团队边界切分有问题。
+
 1.28 【今日阅读】https://blog.bitsrc.io/microfrontends-survey-evaluation-d2af7eade306 How Micro Frontends are being Implemented in 2020: A Survey
 
 1.27 【今日阅读】https://erlang-in-anger.com/ It is first and foremost a collection of tips and tricks to help understand where failures come from, and a dictionary of different code snippets and practices that helped developers debug production systems that were built in Erlang.
