--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.2 【今日阅读】https://domk.website/blog/2021-01-31-cult-of-best-practise.html 最佳实践 => 货物崇拜
+
 2.1 【今日阅读】https://www.amazon.com/Making-Software-Really-Works-Believe/dp/0596808321 Making Software: What Really Works, and Why We Believe It
 
 1.31 【今日阅读】https://zhuanlan.zhihu.com/p/82586450 中台的”中“是什么含义，我曾经提出了三个可能的解释。目前来看，Central Platform 的含义是最正确的。
