--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.3 【今日阅读】https://blog.cleancoder.com/uncle-bob/2012/08/13/the-clean-architecture.html The Clean Architecture
+
 2.2 【今日阅读】https://domk.website/blog/2021-01-31-cult-of-best-practise.html 最佳实践 => 货物崇拜
 
 2.1 【今日阅读】https://www.amazon.com/Making-Software-Really-Works-Believe/dp/0596808321 Making Software: What Really Works, and Why We Believe It
