--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.4 【今日阅读】http://thinking-forth.sourceforge.net/ Many software engineering principles discussed here have been rediscovered in eXtreme Programming, including (re)factoring, modularity, bottom-up and incremental design. Here you'll find all of those and more. Published first in 1984, it could be among the timeless classics of computer books, such as Fred Brooks' The Mythical Man-Month and Donald Knuth's The Art of Computer Programming.
+
 2.3 【今日阅读】https://blog.cleancoder.com/uncle-bob/2012/08/13/the-clean-architecture.html The Clean Architecture
 
 2.2 【今日阅读】https://domk.website/blog/2021-01-31-cult-of-best-practise.html 最佳实践 => 货物崇拜
