--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.22 【今日阅读】https://neilkakkar.com/why-is-naming-things-hard.html Why Is Naming Things Hard?
+
 2.6 【今日阅读】2/6 ~ 2/21 休刊，祝大家节日快乐。
 
 2.5 【今日阅读】https://lobste.rs/s/2ijdt3/reasoning_about_code_is_scam 所谓的让代码更可读，就是一场骗局
