--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.23 【今日阅读】https://news.ycombinator.com/item?id=26211721 Choose Boring Technology https://news.ycombinator.com/item?id=26212563 Choose Exciting Technology
+
 2.22 【今日阅读】https://neilkakkar.com/why-is-naming-things-hard.html Why Is Naming Things Hard?
 
 2.6 【今日阅读】2/6 ~ 2/21 休刊，祝大家节日快乐。
