--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.25 【今日阅读】https://macwright.com/2021/02/23/one-way-to-represent-things.html I claim that most simple programming environments are simple because their datatypes are simple, not because their control flow or statements or expressions are simple.
+
 2.24 【今日阅读】https://news.ycombinator.com/item?id=26217911 A Data Pipeline Is a Materialized View
 
 2.23 【今日阅读】https://news.ycombinator.com/item?id=26211721 Choose Boring Technology https://news.ycombinator.com/item?id=26212563 Choose Exciting Technology
