--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+2.27 【今日阅读】http://www.wirfs-brock.com/allen/posts/1018 Software Diagrams Aren’t Always Correct and That’s OK
+
 2.26 【今日阅读】https://news.ycombinator.com/item?id=26247052 Module boundaries vs service boundaries Remember, ChromeOS is a monolith. iOS is a monolith. Your team is probably much smaller than either of those teams. You simply don't need to juggle a lot of microservices to get what you want.
 
 2.25 【今日阅读】https://macwright.com/2021/02/23/one-way-to-represent-things.html I claim that most simple programming environments are simple because their datatypes are simple, not because their control flow or statements or expressions are simple.
