--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.1 【今日阅读】https://sandimetz.com/blog/2016/1/20/the-wrong-abstraction duplication is far cheaper than the wrong abstraction
+
 2.28 【今日阅读】https://alan-lang.org/the-turing-completeness-problem.html The "business logic" should not be written in Turing complete languages, but rather composable languages based on simple type theory. So the "business logic" would be limited in what it can do to compromise the system. And then it should be deployed on the execution platform, which is a different concern altogether.
 
 2.27 【今日阅读】http://www.wirfs-brock.com/allen/posts/1018 Software Diagrams Aren’t Always Correct and That’s OK
