--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.3 【今日阅读】https://www.youtube.com/watch?v=C78QF3gaYnM 不是所有的“业务”都是围绕 database 的，比如 uber 无人车上跑的“业务集群”就不是，其本质上的分工原则会有不同吗？
+
 3.2 【今日阅读】https://en.wikipedia.org/wiki/Information_hiding 信息隐藏的词条解释
 
 3.1 【今日阅读】https://sandimetz.com/blog/2016/1/20/the-wrong-abstraction duplication is far cheaper than the wrong abstraction
