--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.6 【今日阅读】https://news.ycombinator.com/item?id=17499137 Goodbye Microservices: From 100s of problem children to 1 superstar
+
 3.5 【今日阅读】https://news.ycombinator.com/item?id=10337763 The microservices cargo cult
 
 3.4 【今日阅读】https://relay.dev/docs/en/thinking-in-relay 一句话 reducing the coupling
