--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.7 【今日阅读】https://medium.com/serverless-transformation/is-serverless-the-end-of-ops-devops-vs-noops-nativeops-7997889f9a9c NativeOps: the push for architectural quality and empowerment of developer autonomy in a cloud-native world.
+
 3.6 【今日阅读】https://news.ycombinator.com/item?id=17499137 Goodbye Microservices: From 100s of problem children to 1 superstar
 
 3.5 【今日阅读】https://news.ycombinator.com/item?id=10337763 The microservices cargo cult
