--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.9 【今日阅读】https://lobste.rs/s/mxcmxg/abstraction_is_okay_magic_is_not TL;DR Magic is different. It feels different.
+
 3.8 【今日阅读】https://perl.plover.com/yak/design/ The "design patterns" movement in software claims to have been inspired by the works of architect Christopher Alexander. But an examination of Alexander's books reveals that he was actually talking about something much more interesting.
 
 3.7 【今日阅读】https://medium.com/serverless-transformation/is-serverless-the-end-of-ops-devops-vs-noops-nativeops-7997889f9a9c NativeOps: the push for architectural quality and empowerment of developer autonomy in a cloud-native world.
