--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.10 【今日阅读】https://hbr.org/2020/11/how-apple-is-organized-for-innovation Apple’s functional organization is rare, if not unique, among very large companies. It flies in the face of prevailing management theory that companies should be reorganized into divisions and business units as they become large. But something vital gets lost in a shift to business units: the alignment of decision rights with expertise.
+
 3.9 【今日阅读】https://lobste.rs/s/mxcmxg/abstraction_is_okay_magic_is_not TL;DR Magic is different. It feels different.
 
 3.8 【今日阅读】https://perl.plover.com/yak/design/ The "design patterns" movement in software claims to have been inspired by the works of architect Christopher Alexander. But an examination of Alexander's books reveals that he was actually talking about something much more interesting.
