--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.16 【今日阅读】https://paulhammant.com/2019/11/20/environment-hell/ This would be after 1995, and should have ended before 2015, really. 然而并没有
+
 3.15 【今日阅读】https://vimeo.com/43536416 其实老爷子说的就是要分开 IS 和 DOES。我一直都说 what you do defines who you are，其实就是说没有必要对 IS 进行建模，只要 DO 的事情是在不同的 context 下的，其实没有必要因为物理世界中是同一个object，就是在代码中的同一个 object
 
 3.14 【今日阅读】https://rbcs-us.com/documents/Why-Most-Unit-Testing-is-Waste.pdf Why Most Unit Testing is Waste By James O Coplien
