--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.18 【今日阅读】https://stackoverflow.com/questions/648246/at-what-point-does-a-config-file-become-a-programming-language At what point does a config file become a programming language?
+
 3.17 【今日阅读】https://dl.acm.org/doi/pdf/10.1145/3454122.3454124 MYTH: One productivity metric can tell us everything
 
 3.16 【今日阅读】https://paulhammant.com/2019/11/20/environment-hell/ This would be after 1995, and should have ended before 2015, really. 然而并没有
