--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,10 @@
+3.20 【今日阅读】https://news.ycombinator.com/item?id=26511754 
+An abstraction (OAM)
+On the top of an abstraction (K8s Custom Object specification)
+On the top of an abstraction (Kubernetes, et.al.)
+On top of another abstraction (Containers)
+On top of another abstraction (VMs)
+
 3.19 【今日阅读】https://www.joelonsoftware.com/2002/11/11/the-law-of-leaky-abstractions/ All non-trivial abstractions, to some degree, are leaky.
 
 3.18 【今日阅读】https://stackoverflow.com/questions/648246/at-what-point-does-a-config-file-become-a-programming-language At what point does a config file become a programming language?
