--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,6 @@
+3.22 【今日阅读】https://news.ycombinator.com/item?id=24229325 I am really hating working in the current state of the industry right now. I am used to writing robust, clear, well-tested, and easy to maintain systems.
+The job right now seems just stitching AWS services together, and spending the rest of your time debugging and putting out fires.
+
 3.21 【今日阅读】https://www.infoq.com/presentations/Reflection-OOP-Social/ 听 James Coplien 聊聊 OO 的历史
 
 3.20 【今日阅读】https://news.ycombinator.com/item?id=26511754 
