--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.23 【今日阅读】https://chriskiehl.com/article/thoughts-after-6-years Software development topics I've changed my mind on after 6 years in the industry
+
 3.22 【今日阅读】https://news.ycombinator.com/item?id=24229325 I am really hating working in the current state of the industry right now. I am used to writing robust, clear, well-tested, and easy to maintain systems.
 The job right now seems just stitching AWS services together, and spending the rest of your time debugging and putting out fires.
 
