--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.25 【今日阅读】https://paradox1x.org/2009/11/worth-repeating/ Worth Repeating: Rob Pike “Data dominates.” and Frederick Brooks “Representation is the Essence of Programming”
+
 3.24 【今日阅读】https://paulhammant.com/2021/02/19/software-development-current-reality-tree-starter-pack/ Current Reality Trees (CRT)  看起来是一种很好的由表及里的思维呈现方式。每个爱吐槽的人，都可以画一副自己的。
 
 3.23 【今日阅读】https://chriskiehl.com/article/thoughts-after-6-years Software development topics I've changed my mind on after 6 years in the industry
