--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.26 【今日阅读】https://www.red-gate.com/blog/zero-downtime-database-deployments-are-a-lie Many people assume that building proficiency at database development and operations leads to the ability to attain "zero downtime deployments." In this post I share why "zero downtime" is a problematic goal, and what a better approach looks like.
+
 3.25 【今日阅读】https://paradox1x.org/2009/11/worth-repeating/ Worth Repeating: Rob Pike “Data dominates.” and Frederick Brooks “Representation is the Essence of Programming”
 
 3.24 【今日阅读】https://paulhammant.com/2021/02/19/software-development-current-reality-tree-starter-pack/ Current Reality Trees (CRT)  看起来是一种很好的由表及里的思维呈现方式。每个爱吐槽的人，都可以画一副自己的。
