--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.28 【今日阅读】https://www.informit.com/articles/article.aspx?p=1833567 低风险软件发布的4个原则
+
 3.27 【今日阅读】https://blog.koehntopp.info/2021/03/24/a-lot-of-mysql.html “gitops” ain’t gonna happen soon. We are going to see AIP operations (“ass-in-produxction”) for quite some time, I am afraid. And that is why I wear black and yell at the cloud.
 
 3.26 【今日阅读】https://www.red-gate.com/blog/zero-downtime-database-deployments-are-a-lie Many people assume that building proficiency at database development and operations leads to the ability to attain "zero downtime deployments." In this post I share why "zero downtime" is a problematic goal, and what a better approach looks like.
