--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.29 【今日阅读】https://mkaszubowski.com/2021/03/27/modular-design-read-models-background-jobs.html Modular design patterns: Read models for background jobs
+
 3.28 【今日阅读】https://www.informit.com/articles/article.aspx?p=1833567 低风险软件发布的4个原则
 
 3.27 【今日阅读】https://blog.koehntopp.info/2021/03/24/a-lot-of-mysql.html “gitops” ain’t gonna happen soon. We are going to see AIP operations (“ass-in-produxction”) for quite some time, I am afraid. And that is why I wear black and yell at the cloud.
