--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,6 @@
+3.30 【今日阅读】http://blog.lusis.org/blog/2011/10/18/rollbacks-and-other-deployment-myths/ Rollbacks are a myth
+Yes, it’s true. You can never roll back. You can’t go back in time. You can fake it but understand that it’s typically more risky to rollback than rolling forward. Always be rolling forward.
+
 3.29 【今日阅读】https://mkaszubowski.com/2021/03/27/modular-design-read-models-background-jobs.html Modular design patterns: Read models for background jobs
 
 3.28 【今日阅读】https://www.informit.com/articles/article.aspx?p=1833567 低风险软件发布的4个原则
