--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+3.31 【今日阅读】https://m.youtube.com/watch?v=3wyd6J3yjcs The Silver Bullet Syndrome
+
 3.30 【今日阅读】http://blog.lusis.org/blog/2011/10/18/rollbacks-and-other-deployment-myths/ Rollbacks are a myth
 Yes, it’s true. You can never roll back. You can’t go back in time. You can fake it but understand that it’s typically more risky to rollback than rolling forward. Always be rolling forward.
 
