--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.1 【今日阅读】https://hub.packtpub.com/why-dont-you-have-a-monorepo/ Why don’t you have a monorepo?
+
 3.31 【今日阅读】https://m.youtube.com/watch?v=3wyd6J3yjcs The Silver Bullet Syndrome
 
 3.30 【今日阅读】http://blog.lusis.org/blog/2011/10/18/rollbacks-and-other-deployment-myths/ Rollbacks are a myth
