--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.2 【今日阅读】https://mkaszubowski.com/2020/09/17/modular-software-design-mistakes.html Modular software design - 10 common mistakes
+
 4.1 【今日阅读】https://hub.packtpub.com/why-dont-you-have-a-monorepo/ Why don’t you have a monorepo?
 
 3.31 【今日阅读】https://m.youtube.com/watch?v=3wyd6J3yjcs The Silver Bullet Syndrome
