--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.4 【今日阅读】https://blog.nelhage.com/post/computers-can-be-understood/ 没有捅不破的黑盒，只要功夫下得深，技术栈有多深就可以走多深
+
 4.3 【今日阅读】https://www.gabrielpascua.com/books/2020/02/11/fundamentals-of-software-architecture There are no wrong answers in architecture, only expensive ones.
 
 4.2 【今日阅读】https://mkaszubowski.com/2020/09/17/modular-software-design-mistakes.html Modular software design - 10 common mistakes
