--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.5 【今日阅读】https://blog.nelhage.com/post/some-opinionated-sql-takes/ Honestly, migrations might be my biggest pet peeve with SQL databases. They’re just way harder and riskier than they need to be. Let’s look at two areas where they bug me.
+
 4.4 【今日阅读】https://blog.nelhage.com/post/computers-can-be-understood/ 没有捅不破的黑盒，只要功夫下得深，技术栈有多深就可以走多深
 
 4.3 【今日阅读】https://www.gabrielpascua.com/books/2020/02/11/fundamentals-of-software-architecture There are no wrong answers in architecture, only expensive ones.
