--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.7 【今日阅读】https://huhao.dev/posts/a7c771dd/ 8x Flow 业务建模法（二）：再看什么是业务逻辑
+
 4.6 【今日阅读】https://huhao.dev/posts/2932e594/ 8x Flow 业务建模法（一）：你能分清业务和领域吗？
 
 4.5 【今日阅读】https://blog.nelhage.com/post/some-opinionated-sql-takes/ Honestly, migrations might be my biggest pet peeve with SQL databases. They’re just way harder and riskier than they need to be. Let’s look at two areas where they bug me.
