--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.8 【今日阅读】https://news.ycombinator.com/item?id=2787525 The reason I hate frameworks (even things like Django which is very easy to get started with) is that, at some point, I'm asked to re-learn a different way of solving a problem that I've already solved in the past.
+
 4.7 【今日阅读】https://huhao.dev/posts/a7c771dd/ 8x Flow 业务建模法（二）：再看什么是业务逻辑
 
 4.6 【今日阅读】https://huhao.dev/posts/2932e594/ 8x Flow 业务建模法（一）：你能分清业务和领域吗？
