--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,6 @@
+4.9 【今日阅读】https://media.defense.gov/2018/Oct/09/2002049591/-1/-1/0/DIB_DETECTING_AGILE_BS_2018.10.05.PDF 美国国防部：DIB Guide: Detecting Agile Bullshit。The purpose of this document is to provide
+guidance to DoD program executives and acquisition professionals on how to detect software projects that are really using agile development versus those that are simply waterfall or spiral development in agile clothing (“agile-scrum-fall”).
+
 4.8 【今日阅读】https://news.ycombinator.com/item?id=2787525 The reason I hate frameworks (even things like Django which is very easy to get started with) is that, at some point, I'm asked to re-learn a different way of solving a problem that I've already solved in the past.
 
 4.7 【今日阅读】https://huhao.dev/posts/a7c771dd/ 8x Flow 业务建模法（二）：再看什么是业务逻辑
