--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.11 【今日阅读】https://mitpress.mit.edu/books/software-design-flexibility SICP 作者的新书《Software Design for Flexibility - How to Avoid Programming Yourself into a Corner》
+
 4.10 【今日阅读】https://news.ycombinator.com/item?id=26727878 Adding is favoured over subtracting in problem solving
 
 4.9 【今日阅读】https://media.defense.gov/2018/Oct/09/2002049591/-1/-1/0/DIB_DETECTING_AGILE_BS_2018.10.05.PDF 美国国防部：DIB Guide: Detecting Agile Bullshit。The purpose of this document is to provide
