--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.12 【今日阅读】https://news.ycombinator.com/item?id=26759680 the increased communication overhead will consume an ever-increasing quantity of the calendar time available. When n people have to communicate among themselves, as n increases, their output decreases and when it becomes negative the project is delayed further with every person added.
+
 4.11 【今日阅读】https://mitpress.mit.edu/books/software-design-flexibility SICP 作者的新书《Software Design for Flexibility - How to Avoid Programming Yourself into a Corner》
 
 4.10 【今日阅读】https://news.ycombinator.com/item?id=26727878 Adding is favoured over subtracting in problem solving
