--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.14 【今日阅读】https://danielbmarkham.com/personality-models-management-by-statistic-and-better-ai/ Personality Models, Management-By Statistic, And Better AI
+
 4.13 【今日阅读】https://github.com/temporalio/temporal/ uber 的那个工作流引擎 Cadence 的作者出来搞了家创业公司
 
 4.12 【今日阅读】https://news.ycombinator.com/item?id=26759680 the increased communication overhead will consume an ever-increasing quantity of the calendar time available. When n people have to communicate among themselves, as n increases, their output decreases and when it becomes negative the project is delayed further with every person added.
