--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.15 【今日阅读】http://www.kamilgrzybek.com/design/modular-monolith-primer/ If you don’t need to distribute your system (and most people don’t) and your system is non-trivial – maybe a Modular Monolith with Domain Centric Design in mind will be for you.
+
 4.14 【今日阅读】https://danielbmarkham.com/personality-models-management-by-statistic-and-better-ai/ Personality Models, Management-By Statistic, And Better AI
 
 4.13 【今日阅读】https://github.com/temporalio/temporal/ uber 的那个工作流引擎 Cadence 的作者出来搞了家创业公司
