--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,6 @@
+4.16 【今日阅读】https://www.amazon.com/gp/product/0133903354/ 5.10 The Matrix: Solve It or Dissolve It
+Half the world is so used to matrix management as to take the scheme for granted. The other half just thinks it’s bizarre.
+
 4.15 【今日阅读】http://www.kamilgrzybek.com/design/modular-monolith-primer/ If you don’t need to distribute your system (and most people don’t) and your system is non-trivial – maybe a Modular Monolith with Domain Centric Design in mind will be for you.
 
 4.14 【今日阅读】https://danielbmarkham.com/personality-models-management-by-statistic-and-better-ai/ Personality Models, Management-By Statistic, And Better AI
