--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.17 【今日阅读】https://lobste.rs/s/lyeekg/read_from_databases_write_apis 从数据库读，往api写。读写分开
+
 4.16 【今日阅读】https://www.amazon.com/gp/product/0133903354/ 5.10 The Matrix: Solve It or Dissolve It
 Half the world is so used to matrix management as to take the scheme for granted. The other half just thinks it’s bizarre.
 
