--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.18 【今日阅读】https://medium.com/swlh/problems-with-micro-frontends-8a8fc32a7d58 We were too focused on size and not focused on our problems. In our case, some argued for dividing our product between the two large and distinct domains, with little overlap, matching our lines of business. Others argued for cutting a level deeper, splitting each 15–20 times to make everything really ‘micro’.
+
 4.17 【今日阅读】https://lobste.rs/s/lyeekg/read_from_databases_write_apis 从数据库读，往api写。读写分开
 
 4.16 【今日阅读】https://www.amazon.com/gp/product/0133903354/ 5.10 The Matrix: Solve It or Dissolve It
