--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.21 【今日阅读】https://stitcher.io/blog/what-event-sourcing-is-not-about Starting with event sourcing
+
 4.20 【今日阅读】https://www.youtube.com/watch?v=SiGFGW1X3Y0 Objective reality and subjective consciousness are two sides of the same (information theoretic) coin.
 
 4.19 【今日阅读】https://zhuanlan.zhihu.com/p/365278966 软件 A 依赖 软件 B 和 C， 而软件 B 依赖 X 的 v1 版本，软件 C 则依赖 软件 X 的 v2 版本，这时候如果用户需要安装软件 A，那么包管理器应该帮他安装 X 的 v1 版本还是 v2 版本呢？这个问题我们可以称之为“菱形依赖”问题。
