--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.23 【今日阅读】https://zhuanlan.zhihu.com/p/366859735 随意能部署一套是注定无法稳定的，多租户才是终极解决办法
+
 4.22 【今日阅读】https://mp.weixin.qq.com/s/Q20M4CRATcQEzlD1rqKMEw 如何避免引入一堆小模块，且不确定之间的版本兼容性？import 再 export 是唯一的解法吗？
 
 4.21 【今日阅读】https://stitcher.io/blog/what-event-sourcing-is-not-about Starting with event sourcing
