--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.25 【今日阅读】https://earthly.dev/blog/brown-green-language/ The reason that [ developers ] think the old code is a mess is because of a cardinal, fundamental law of programming: It’s harder to read code than to write it. by Joel Spolsky
+
 4.24 【今日阅读】https://www.red-gate.com/simple-talk/opinion/opinion-pieces/the-framework-myth/ The Framework Myth
 
 4.23 【今日阅读】https://zhuanlan.zhihu.com/p/366859735 随意能部署一套是注定无法稳定的，多租户才是终极解决办法
