--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.27 【今日阅读】https://netflixtechblog.com/the-netflix-cosmos-platform-35c14d9351ad The Netflix engineering culture famously relies on personal judgement rather than top-down control. Software developers have both freedom and responsibility to take risks and make decisions. None of us have the title of Software Architect
+
 4.26 【今日阅读】https://www.joelonsoftware.com/2000/04/06/things-you-should-never-do-part-i/ This is why code reuse is so hard. This is why everybody on your team has a different function they like to use for splitting strings into arrays of strings. They write their own function because it’s easier and more fun than figuring out how the old function works.
 
 4.25 【今日阅读】https://earthly.dev/blog/brown-green-language/ The reason that [ developers ] think the old code is a mess is because of a cardinal, fundamental law of programming: It’s harder to read code than to write it. by Joel Spolsky
