--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+4.28 【今日阅读】https://lobste.rs/s/9cyjyb/please_systematically_enforce_your Please, Systematically Enforce Your Constraints. “internationalization”, “activity history”, “dark mode” and “right to be forgotten” are behavior-constraining features. Building them in large part involves adding new constraints that must apply across existing and future behaviors in your app. Today’s software tools and techniques are designed mostly around behavior-adding features, not constraintful features.
+
 4.27 【今日阅读】https://netflixtechblog.com/the-netflix-cosmos-platform-35c14d9351ad The Netflix engineering culture famously relies on personal judgement rather than top-down control. Software developers have both freedom and responsibility to take risks and make decisions. None of us have the title of Software Architect
 
 4.26 【今日阅读】https://www.joelonsoftware.com/2000/04/06/things-you-should-never-do-part-i/ This is why code reuse is so hard. This is why everybody on your team has a different function they like to use for splitting strings into arrays of strings. They write their own function because it’s easier and more fun than figuring out how the old function works.
