--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,9 @@
+5.7 【今日阅读】https://eavoices.com/2010/11/28/the-art-of-change-fractal-and-emergent/ The Art of Change: Fractal and Emergent
+
+5.6 【今日阅读】https://blog.marcgravell.com/2021/05/is-era-of-reflection-heavy-c-libraries.html?m=1 用 partial method 作为集成的 api，链接用户的代码和框架生成的代码
+
+4.30 【今日阅读】https://netflixtechblog.com/building-and-scaling-data-lineage-at-netflix-to-improve-data-infrastructure-reliability-and-1a52526a7977 Freedom & Responsibility (F&R) is the lynchpin of Netflix’s culture empowering teams to move fast to deliver on innovation and operate with freedom to satisfy their mission. Central engineering teams provide paved paths (secure, vetted and supported options) and guard rails to help reduce variance in choices available for tools and technologies to support the development of scalable technical architectures.
+
 4.29 【今日阅读】https://news.ycombinator.com/item?id=26969364 What's Accenture?
 
 4.28 【今日阅读】https://lobste.rs/s/9cyjyb/please_systematically_enforce_your Please, Systematically Enforce Your Constraints. “internationalization”, “activity history”, “dark mode” and “right to be forgotten” are behavior-constraining features. Building them in large part involves adding new constraints that must apply across existing and future behaviors in your app. Today’s software tools and techniques are designed mostly around behavior-adding features, not constraintful features.
