--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.8 【今日阅读】https://mp.weixin.qq.com/s/SjU1DbsXcBD-2DJt9z65zg 在日常工作中我观察到，面对老系统重构和迁移场景，有大量代码属于流水账代码，通常能看到开发在对外的API接口里直接写业务逻辑代码，或者在一个服务里大量的堆接口，导致业务逻辑实际无法收敛，接口复用性比较差。所以本文主要想系统性的解释一下如何通过DDD的重构，将原有的流水账代码改造为逻辑清晰、职责分明的模块。
+
 5.7 【今日阅读】https://eavoices.com/2010/11/28/the-art-of-change-fractal-and-emergent/ The Art of Change: Fractal and Emergent
 
 5.6 【今日阅读】https://blog.marcgravell.com/2021/05/is-era-of-reflection-heavy-c-libraries.html?m=1 用 partial method 作为集成的 api，链接用户的代码和框架生成的代码
