--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.11 【今日阅读】https://medium.com/dunnhumby-data-science-engineering/dealing-with-the-inevitability-of-software-entropy-is-software-equilibrium-attainable-7d5d277dc689 Dealing With The Inevitability of Software Entropy — Is Software Equilibrium Attainable?
+
 5.10 【今日阅读】https://mp.weixin.qq.com/s/bY2s7wjfggSt77kj8exYLQ 微服务的灾难
 
 5.9 【今日阅读】https://medium.com/@casual.evil52/events-in-entity-component-systems-22dc5107ed81 和微服务一样，ECS 在游戏领域也是类似的存在。大家鼓吹用了 ECS 之后，你的逻辑就解耦了。但是需求就不知道咋实现了。
