--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.12 【今日阅读】https://zhuanlan.zhihu.com/p/371279371 重新梳理了一下《代码防腐》，拆出了5个方向。123大致对应了之前的consistency, autonomy, feedback，45两点是新加入的。
+
 5.11 【今日阅读】https://medium.com/dunnhumby-data-science-engineering/dealing-with-the-inevitability-of-software-entropy-is-software-equilibrium-attainable-7d5d277dc689 Dealing With The Inevitability of Software Entropy — Is Software Equilibrium Attainable?
 
 5.10 【今日阅读】https://mp.weixin.qq.com/s/bY2s7wjfggSt77kj8exYLQ 微服务的灾难
