--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.14 【今日阅读】https://scs-architecture.org/index.html The Self-contained System (SCS) approach is an architecture that focuses on a separation of the functionality into many independent systems, making the complete logical system a collaboration of many smaller software systems.
+
 5.13 【今日阅读】https://www.reddit.com/r/programming/comments/g7tjzn/preventing_software_rot/ Preventing Software Rot
 
 5.12 【今日阅读】https://zhuanlan.zhihu.com/p/371279371 重新梳理了一下《代码防腐》，拆出了5个方向。123大致对应了之前的consistency, autonomy, feedback，45两点是新加入的。
