--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+5.15 【今日阅读】https://www.dddheuristics.com/ We all use heuristics (even if we haven’t articulated them to others) to discover, understand, explore, create, modify, or extend complex software systems. Billy Vaughn Koen, in Discussion of the Method: Conducting the Engineer’s Approach to Problem Solving, defines a heuristic as, “anything that provides a plausible aid or direction in the solution of a problem but is in the final analysis unjustified, incapable of justification, and potentially fallible.
+
+-Rebecca Wirfs-Brock
+
 5.14 【今日阅读】https://scs-architecture.org/index.html The Self-contained System (SCS) approach is an architecture that focuses on a separation of the functionality into many independent systems, making the complete logical system a collaboration of many smaller software systems.
 
 5.13 【今日阅读】https://www.reddit.com/r/programming/comments/g7tjzn/preventing_software_rot/ Preventing Software Rot
