--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.17 【今日阅读】https://spectrum.ieee.org/computing/it/inside-hidden-world-legacy-it-systems The best way to deal with legacy IT is to never let IT become legacy. Since 2015, DARPA has funded research aimed at making software that will be viable for more than 100 years. The Building Resource Adaptive Software Systems (BRASS) program is trying to figure out how to build “long-lived software systems that can dynamically adapt to changes in the resources they depend upon and environments in which they operate,” according to program manager ­Sandeep Neema.
+
 5.16 【今日阅读】https://thehosk.medium.com/software-development-is-a-losers-game-fc68bb30d7eb Software development is a loser’s game
 
 5.15 【今日阅读】https://www.dddheuristics.com/ We all use heuristics (even if we haven’t articulated them to others) to discover, understand, explore, create, modify, or extend complex software systems. Billy Vaughn Koen, in Discussion of the Method: Conducting the Engineer’s Approach to Problem Solving, defines a heuristic as, “anything that provides a plausible aid or direction in the solution of a problem but is in the final analysis unjustified, incapable of justification, and potentially fallible.
