--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.19 【今日阅读】https://mp.weixin.qq.com/s/3zNwbV-x_LJbFHIPBVr-mQ 饿了么交易系统5年演化血泪史
+
 5.18 【今日阅读】https://www.youtube.com/watch?v=QnmRpHFoYLk A Path to Better Programming • Robert "Uncle Bob" Martin & Allen Holub
 
 5.17 【今日阅读】https://spectrum.ieee.org/computing/it/inside-hidden-world-legacy-it-systems The best way to deal with legacy IT is to never let IT become legacy. Since 2015, DARPA has funded research aimed at making software that will be viable for more than 100 years. The Building Resource Adaptive Software Systems (BRASS) program is trying to figure out how to build “long-lived software systems that can dynamically adapt to changes in the resources they depend upon and environments in which they operate,” according to program manager ­Sandeep Neema.
