--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.21 【今日阅读】https://www.youtube.com/watch?v=3gib0hKYjB0 听 kent beck 讲什么是耦合什么是内聚。我的观后感 https://zhuanlan.zhihu.com/p/373962759
+
 5.20 【今日阅读】https://cpojer.net/posts/dependency-managers-dont-manage-your-dependencies https://cpojer.net/posts/rethinking-javascript-infrastructure Dependency Managers Don’t Manage Your Dependencies
 
 5.19 【今日阅读】https://mp.weixin.qq.com/s/3zNwbV-x_LJbFHIPBVr-mQ 饿了么交易系统5年演化血泪史
