--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.22 【今日阅读】https://docs.planetscale.com/concepts/nonblocking-schema-changes PlanetScale is a new hosted database provider. Where it differs from the rest though is in it's branching/merging features for migrations. It allows developers to create branches off of the main database schema and then apply their schema changes in isolation.
+
 5.21 【今日阅读】https://www.youtube.com/watch?v=3gib0hKYjB0 听 kent beck 讲什么是耦合什么是内聚。我的观后感 https://zhuanlan.zhihu.com/p/373962759
 
 5.20 【今日阅读】https://cpojer.net/posts/dependency-managers-dont-manage-your-dependencies https://cpojer.net/posts/rethinking-javascript-infrastructure Dependency Managers Don’t Manage Your Dependencies
