--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.23 【今日阅读】https://web.archive.org/web/20140415191114/http://www.threeriversinstitute.org/blog/?p=104  An element that solves several problems will only be partly changed. This is riskier and more expensive than changing a whole element because first you need to figure out what part of the element should be changed and then you need to prove that the unchanged part of the element is truly unchanged. Cohesive elements, replaced in total, don’t incur these costs. 这就是 kent beck 阐述的他的定义下的 cohesion 能够降低成本的原理
+
 5.22 【今日阅读】https://docs.planetscale.com/concepts/nonblocking-schema-changes PlanetScale is a new hosted database provider. Where it differs from the rest though is in it's branching/merging features for migrations. It allows developers to create branches off of the main database schema and then apply their schema changes in isolation.
 
 5.21 【今日阅读】https://www.youtube.com/watch?v=3gib0hKYjB0 听 kent beck 讲什么是耦合什么是内聚。我的观后感 https://zhuanlan.zhihu.com/p/373962759
