--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.25 【今日阅读】http://static.googleusercontent.com/media/research.google.com/en//pubs/archive/32713.pdf Joshua Bloch on How to Design a Good API and Why it Matters
+
 5.24 【今日阅读】https://www.austincc.edu/sondg/handouts/micro/whyfirms.pdf Why Firms? 1. Lower transactions costs 2. Economies of scale 3. Economies of team production
 
 5.23 【今日阅读】https://web.archive.org/web/20140415191114/http://www.threeriversinstitute.org/blog/?p=104  An element that solves several problems will only be partly changed. This is riskier and more expensive than changing a whole element because first you need to figure out what part of the element should be changed and then you need to prove that the unchanged part of the element is truly unchanged. Cohesive elements, replaced in total, don’t incur these costs. 这就是 kent beck 阐述的他的定义下的 cohesion 能够降低成本的原理
