--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.26 【今日阅读】https://zhuanlan.zhihu.com/p/374398693 而真正有经验的工程师，一定会在开始写代码之前先思考将要写作的代码，哪些是用于定义业务对象的，哪些是用于控制数据流的，哪些是为了完成界面渲染的，哪些是为了完成用户交互的等等。而这些思考，用一种思想来概括就是“分层思想”或者叫“Layered Architecture”。
+
 5.25 【今日阅读】http://static.googleusercontent.com/media/research.google.com/en//pubs/archive/32713.pdf Joshua Bloch on How to Design a Good API and Why it Matters
 
 5.24 【今日阅读】https://www.austincc.edu/sondg/handouts/micro/whyfirms.pdf Why Firms? 1. Lower transactions costs 2. Economies of scale 3. Economies of team production
