--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,6 @@
+5.28 【今日阅读】http://www.blackwellpublishing.com/content/bpl_images/content_store/sample_chapter/9780631233152/garud-001.pdf We have shown thus far that complex systems will evolve from simple systems much
+more rapidly if there are stable intermediate forms than if there are not. The resulting complex forms in the former case will be hierarchic.
+
 5.27 【今日阅读】https://zhuanlan.zhihu.com/p/375062873 如果一个好主意50年了还没有落地，那它也不是那么好的主意
 
 5.26 【今日阅读】https://zhuanlan.zhihu.com/p/374398693 而真正有经验的工程师，一定会在开始写代码之前先思考将要写作的代码，哪些是用于定义业务对象的，哪些是用于控制数据流的，哪些是为了完成界面渲染的，哪些是为了完成用户交互的等等。而这些思考，用一种思想来概括就是“分层思想”或者叫“Layered Architecture”。
