--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+5.29 【今日阅读】https://wiki.c2.com/?ConceptualIntegrity In 1995, Brooks still hasn't changed his mind: I am more convinced than ever. ConceptualIntegrity is central to product quality. Having a system architect is the most important single step toward conceptual integrity...after teaching a software engineering laboratory more than 20 times, I came to insist that student teams as small as four people choose a manager, and a separate architect.
+
 5.28 【今日阅读】http://www.blackwellpublishing.com/content/bpl_images/content_store/sample_chapter/9780631233152/garud-001.pdf We have shown thus far that complex systems will evolve from simple systems much
 more rapidly if there are stable intermediate forms than if there are not. The resulting complex forms in the former case will be hierarchic.
 
